--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -31,9 +31,7 @@
           <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round">Bookmarks</a>
           </div>
-          <div class="social-description">
-            <a class="btn btn-primary btn-lg btn-round" routerLink="/pages/newcomplain">Complain</a>
-          </div>
+
         </div>
       </div>
     </div>
@@ -58,11 +56,14 @@
                   <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
                   <th scope="col">Finalize</th>
                   <th scope="col">Remove</th>
+                  <th scope="col">Report</th>
+
+                  <!-- current_user?.broadcasts -->
                 </tr>
               </thead>
               <tbody>
-                <tr *ngFor="let x of current_user?.broadcasts.slice(0, 5)">
-                  <td>{{x._id | slice:-4}}</td>
+                <tr *ngFor="let x of broadcastArray">
+                  <td>{{x._id}}</td>
                   <td>{{x.name}}</td>
                   <td scope="row">{{x.tags}}</td>
                   <td scope="row">
@@ -74,6 +75,11 @@
                     <div class="social-description">
                       <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm"><i _ngcontent-c3=""
                           class="now-ui-icons ui-1_simple-remove"></i></a>
+                    </div>
+                  </td>
+                  <td>
+                    <div class="social-description">
+                      <a class="btn btn-primary btn-lg btn-round btn-sm" routerLink="/pages/newcomplain">C</a>
                     </div>
                   </td>
                 </tr>
