--- a/frontend/src/app/components/broadcast/broadcast.component.html
+++ b/frontend/src/app/components/broadcast/broadcast.component.html
@@ -2,10 +2,10 @@
     <div class="container">
         <div class="col-md-4 content-center">
             <div class="card card-login card-plain">
-
+                <h1>Broadcast Form</h1>
                 <form class="form-group" [formGroup]="broadcastForm">
                     <div class="header header-primary text-center"> </div>
-                    <h1>Broadcast Form</h1>
+
                     <div class="mt-5">
                         <div class="form-group"><label>Product</label>
                             <input [(ngModel)]="product" formControlName="product" class="form-control border-input"
@@ -31,7 +31,7 @@
                     </div>
 
                     <div class="footer text-center">
-                        <a class="btn btn-primary btn-round btn-lg btn-block" (click)="getBroadcast()">Broadcast</a>
+                        <a class="btn btn-primary btn-round btn-lg btn-block" (click)="newBroadcast()">Broadcast</a>
                     </div>
                 </form>
 
