purchase history and bookmarks

--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -26,10 +26,11 @@
             <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/broadcast">Broadcast</a>
           </div>
           <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Purchase History</a>
+            <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/purchasehistory">Purchase
+              History</a>
           </div>
           <div class="social-description">
-            <a href="#button" class="btn btn-primary btn-lg btn-round">Bookmarks</a>
+            <a href="#button" class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/bookmarks">Bookmarks</a>
           </div>
 
         </div>
