--- a/frontend/src/app/components/selling/selling.component.html
+++ b/frontend/src/app/components/selling/selling.component.html
@@ -1,5 +1,5 @@
 <div class="page-header" filter-color="orange">
-  <div class="page-header-image" style="background-image:url(assets/img/login.jpg)"></div>
+  <div class="page-header-image" style="background-image:url(assets/img/bg6.jpg)"></div>
   <div class="container">
     <div class="col-md-4 content-center">
       <div class="card card-login card-plain">
@@ -8,216 +8,21 @@
               <div ngbDropdown>
                   <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
                       type="button" ngbDropdownToggle>
-                      <i class="now-ui-icons shopping_box"></i> Product Type
+                      <i class="now-ui-icons shopping_box"></i> Product Category
                   </button>
                   <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                      <button ngbDropdownItem (click)="selectTheType('Laptops')">Laptop</button>
-                      <button ngbDropdownItem (click)="selectTheType('Televisions')">Televisions</button>
-                      <button ngbDropdownItem (click)="selectTheType('Hometheatres')">Hometheatres</button>
+                      <button ngbDropdownItem (click)="selectTheType('Laptops')">Electronics</button>
+                      <button ngbDropdownItem (click)="selectTheType('Televisions')">Stationaries</button>
+                      <button ngbDropdownItem (click)="selectTheType('Hometheatres')">Home essentials</button>
                       <button ngbDropdownItem (click)="selectTheType('Vehicles')">Vehicles</button>
+                      <button ngbDropdownItem (click)="selectTheType('Vehicles')">Pharmacy goods</button>
                       <button ngbDropdownItem (click)="selectTheType('Other')">Other</button>
                   </div>
               </div>
 
-              <div formArrayName="Laptops" *ngFor="let skill of employeeForm.get('Laptops').controls">
-                <div formGroupName = '0'>
-                  <div class="pull-left">
-                    <h6>
-                        Laptop
-                    </h6>
-                  </div>
-                  <div class="formGroup">
-                    <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                      <div class="input-group-prepend">
-                          <span class="input-group-text">  <i class="now-ui-icons shopping_tag-content"></i></span>
-                      </div>
-                        <input type="text" class="form-control" placeholder="Brand Name..." (focus)="focus=true" (blur)="focus=false" formControlName = "BrandName" for="BrandName">
-                    </div>
-                  </div>
-
-                  <div class="formGroup">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons tech_laptop"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="Model Name..." (focus)="focus=true" (blur)="focus=false" formControlName = "ModelName" for="ModelName">
-                      </div>
-                  </div>
-    
-                  <div class="formGroup">
-                    <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                      <div class="input-group-prepend">
-                          <span class="input-group-text">  <i class="now-ui-icons business_money-coins"></i></span>
-                      </div>
-                        <input type="text" class="form-control" placeholder="Price..." (focus)="focus=true" (blur)="focus=false" formControlName = "Price" for="Price">
-                    </div>
-                  </div>
-    
-                  <div class="formGroup">
-                    <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                      <div class="input-group-prepend">
-                          <span class="input-group-text">  <i class="now-ui-icons users_circle-08"></i></span>
-                      </div>
-                        <input type="text" class="form-control" placeholder="User..." (focus)="focus=true" (blur)="focus=false" formControlName = "User" for="User">
-                    </div>
-                  </div>
-    
-                  <div class="formGroup">
-                    <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                      <div class="input-group-prepend">
-                          <span class="input-group-text">  <i class="now-ui-icons loader_gear"></i></span>
-                      </div>
-                        <input type="text" class="form-control" placeholder="Performance..." (focus)="focus=true" (blur)="focus=false" formControlName = "Performance" for="Performance">
-                    </div>
-                  </div>
-    
-                  <div class="formGroup">
-                    <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                      <div class="input-group-prepend">
-                          <span class="input-group-text">  <i class="now-ui-icons files_paper"></i></span>
-                      </div>
-                        <input type="text" class="form-control" placeholder="Other Features..." (focus)="focus=true" (blur)="focus=false" formControlName = "OtherFeatures" for="OtherFeatures">
-                    </div>
-                  </div>
-                </div>
+              <div>
+                  <input type="file" (change)="getTheImage($event)" class="btn btn-primary btn-round btn-neutral btn-simple btn-small" >
               </div>
-
-              <div formArrayName="Vehicles" *ngFor="let skill of employeeForm.get('Vehicles').controls">
-                  <div formGroupName = '0'>
-                    <div class="pull-left">
-                      <h6>
-                          Vehicle
-                      </h6>
-                    </div>
-
-                    <div class="formGroup">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons shopping_tag-content"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="Brand Name..." (focus)="focus=true" (blur)="focus=false" formControlName = "BrandName" for="BrandName">
-                      </div>
-                    </div>
-
-                    <div class="formGroup">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons transportation_bus-front-12"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="Model Name..." (focus)="focus=true" (blur)="focus=false" formControlName = "ModelName" for="ModelName">
-                      </div>
-                    </div>
-      
-                    <div class="formGroup">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons business_money-coins"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="Price..." (focus)="focus=true" (blur)="focus=false" formControlName = "Price" for="Price">
-                      </div>
-                    </div>
-      
-                    <div class="formGroup">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons users_single-02"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="User..." (focus)="focus=true" (blur)="focus=false" formControlName = "User" for="User">
-                      </div>
-                    </div>
-      
-                    <!-- <div class="formGroup">
-                      <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                        <div class="input-group-prepend">
-                            <span class="input-group-text">  <i class="now-ui-icons files_paper"></i></span>
-                        </div>
-                          <input type="text" class="form-control" placeholder="Engine Number..." (focus)="focus=true" (blur)="focus=false" formControlName = "EngineNumber" for="EngineNumber">
-                      </div>
-                    </div> -->
-
-                    <div class="formGroup">
-                        <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                          <div class="input-group-prepend">
-                              <span class="input-group-text">  <i class="now-ui-icons ui-2_settings-90"></i></span>
-                          </div>
-                            <input type="text" class="form-control" placeholder="Engine Capasity..." (focus)="focus=true" (blur)="focus=false" formControlName = "EngineCapasity" for="EngineCapasity">
-                        </div>
-                    </div>
-
-                    <!-- <div class="formGroup">
-                        <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                          <div class="input-group-prepend">
-                              <span class="input-group-text">  <i class="now-ui-icons shopping_tag-content"></i></span>
-                          </div>
-                            <input type="text" class="form-control" placeholder="Registered Province..." (focus)="focus=true" (blur)="focus=false" formControlName = "RegisteredProvince" for="RegisteredProvince">
-                        </div>
-                    </div>
-
-                    <div class="formGroup">
-                        <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                          <div class="input-group-prepend">
-                              <span class="input-group-text">  <i class="now-ui-icons shopping_tag-content"></i></span>
-                          </div>
-                            <input type="text" class="form-control" placeholder="Number Plate..." (focus)="focus=true" (blur)="focus=false" formControlName = "NumberPlate" for="NumberPlate">
-                        </div>
-                    </div> -->
-
-                    <div class="formGroup">
-                        <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
-                          <div class="input-group-prepend">
-                              <span class="input-group-text">  <i class="now-ui-icons shopping_tag-content"></i></span>
-                          </div>
-                            <input type="text" class="form-control" placeholder="Other Features..." (focus)="focus=true" (blur)="focus=false" formControlName = "OtherFeatures" for="OtherFeatures">
-                        </div>
-                      </div>
-                  </div>
-                </div>
-              
-  
-                <div ngbDropdown>
-                    <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
-                        type="button" ngbDropdownToggle>
-                        <i class="now-ui-icons location_pin"></i> Location
-                    </button>
-                    <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                        <button ngbDropdownItem>Current Address</button>
-                        <button ngbDropdownItem>Select another location</button>
-                    </div>
-                </div>
-
-              <div ngbDropdown>
-                  <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
-                      type="button" ngbDropdownToggle>
-                      <i class="now-ui-icons users_single-02"></i> Price Range
-                  </button>
-                  <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                      <button ngbDropdownItem>0 - 10000</button>
-                      <button ngbDropdownItem>10000 - 45000</button>
-                      <button ngbDropdownItem>45000 - 100000</button>
-                      <button ngbDropdownItem>100000+</button>
-                  </div>
-              </div>
-
-              <div ngbDropdown >
-                      <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
-                          type="button" ngbDropdownToggle>
-                          <i class="now-ui-icons users_single-02"></i> Brand Name
-                      </button>
-                      <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
-                          <button ngbDropdownItem>Asus</button>
-                          <button ngbDropdownItem>Dell</button>
-                          <button ngbDropdownItem>HP</button>
-                          <button ngbDropdownItem>Other</button>
-                      </div>
-                  </div>
-
-              <div class="header header-primary text-center">
-              </div>
-
-                <div class="form-check form-check-radio black">
-                    
-                </div>
-              
 
               <div class="content">
                 <div class="input-group form-group-no-border input-lg" [ngClass]="{'input-group-focus':focus===true}">
@@ -229,7 +34,7 @@
               </div>
               <div class="footer text-center">
 
-                  <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Broadcast</a>
+                  <a href="#pablo" class="btn btn-primary btn-round btn-lg btn-block">Sell</a>
 
               </div>
               <div class="pull-left">
