--- a/frontend/src/app/pages/userprofile/adminprofile/adminprofile.component.html
+++ b/frontend/src/app/pages/userprofile/adminprofile/adminprofile.component.html
@@ -18,7 +18,7 @@
 
         <div class="row justify-content-center">
           <div class="social-description">
-            <a [routerLink]="['/pages/complains']" routerLinkActive="router-link-active"  class="btn btn-primary btn-lg btn-round">View Messages</a>
+            <a href="#button" class="btn btn-primary btn-lg btn-round">View Messages</a>
           </div>
           <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round">Site Settings</a>
@@ -40,23 +40,24 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <form>
-                              <!-- <div class="form-group form-inline">
+          <!--<form>
+                              <div class="form-group form-inline">
                                   Search <input class="form-control ml-2" type="text" name="searchTerm" [(ngModel)]="service.searchTerm"/>
                                   <span class="ml-3" *ngIf="service.loading$ | async">Loading...</span>
-                              </div> -->
-                              <h2>Recent Complains</h2>
+                              </div>
+              
                               <table class="table table-striped">
                                   <thead>
                                       <tr>
                                           <th scope="col">Number</th>
                                           <th scope="col" sortable="name" (sort)="onSort($event)">Customer Name</th>
                                           <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                                          <th scope="col" sortable="message" (sort)="onSort($event)">Complain</th>
-
+                                          <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
+                                          <th scope="col">Finalize</th>
+                                          <th scope="col">Action</th>
                                       </tr>
                                   </thead>
-                                  <!-- <tbody>
+                                  <tbody>
                                   <tr *ngFor="let country of countries$ | async">
                                       <th scope="row">{{ country.id }}</th>
                                           <td>
@@ -66,8 +67,9 @@
                                       <td><ngb-highlight [result]="country.area | number" [term]="service.searchTerm"></ngb-highlight></td>
                                       <td><ngb-highlight [result]="country.population | number" [term]="service.searchTerm"></ngb-highlight></td>
                                   </tr>
-                                  </tbody> -->
+                                  </tbody>
                               </table>
+              
                               <div class="d-flex justify-content-between p-2">
                                   <ngb-pagination
                                   [collectionSize]="total$ | async" [(page)]="service.page" [pageSize]="service.pageSize">
@@ -80,13 +82,13 @@
                                   </select>
                               </div>
               
-                              </form>
+                              </form>-->
 
         </div>
       </div>
     </div>
   </div>
-  <!-- <div class="section">
+  <div class="section">
     <div class="col">
       <div class="col-md-8 ml-auto mr-auto">
         <div class="media-area">
@@ -138,9 +140,9 @@
       </div>
     </div>
 
-  </div> -->
+  </div>
 
-  <!-- <div class="section">
+  <div class="section">
     <div class="col-md-8 ml-auto mr-auto">
       <div class="media-area">
         <h3>Reviews</h3>
@@ -191,4 +193,4 @@
       </div>
     </div>
   </footer>
-</div> -->
+</div>
