--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -49,17 +49,16 @@
               <div class="row">
                 <div class="col-xs-12 col-md-6 text-center">
                   <h1 class="rating-num">
-                    {{this.highestRate | number:'1.0-0'}}</h1>
-                    <div class="stars">
-                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 1" onclick="add(this,1)"></span>
-                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 2" onclick="add(this,1)"></span>
-                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 3" onclick="add(this,1)"></span>
-                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 4" onclick="add(this,1)"></span>
-                      <span class="fa fa-star" id="star1" *ngIf="this.highestRate >= 5" onclick="add(this,1)"></span>
-                      </div>
-                   
+                    4.0</h1>
+                  <div class="stars">
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                    <span class="fa fa-star" id="star1" onclick="add(this,1)"></span>
+                  </div>
                   <div>
-                    <span class="glyphicon glyphicon-user"></span>{{this.totalRates}} total
+                    <span class="glyphicon glyphicon-user"></span>1,050,008 total
                   </div>
                 </div>
 
@@ -71,8 +70,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress progress-striped">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100"  [ngStyle]="{'width.%':this.starFivePer }">
-                          <span class="sr-only">{{this.starFivePer}}%</span>
+                          aria-valuemin="0" aria-valuemax="100" style="width: 80%">
+                          <span class="sr-only">80%</span>
                         </div>
                       </div>
                     </div>
@@ -83,8 +82,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starFourPer }">
-                          <span class="sr-only">{{this.starFourPer}}%</span>
+                          aria-valuemin="0" aria-valuemax="100" style="width: 60%">
+                          <span class="sr-only">60%</span>
                         </div>
                       </div>
                     </div>
@@ -95,8 +94,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starThreePer }">
-                          <span class="sr-only">{{this.starThreePer}}%</span>
+                          aria-valuemin="0" aria-valuemax="100" style="width: 40%">
+                          <span class="sr-only">40%</span>
                         </div>
                       </div>
                     </div>
@@ -107,8 +106,8 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-warning" role="progressbar" aria-valuenow="20"
-                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starTwoPer }">
-                          <span class="sr-only">{{this.starTwoPer}}%</span>
+                          aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+                          <span class="sr-only">20%</span>
                         </div>
                       </div>
                     </div>
@@ -119,12 +118,11 @@
                     <div class="col-xs-8 col-md-9">
                       <div class="progress">
                         <div class="progress-bar progress-bar-danger" role="progressbar" aria-valuenow="80"
-                          aria-valuemin="0" aria-valuemax="100" [ngStyle]="{'width.%':this.starOnePer }">
-                          <span class="sr-only">{{this.starOnePer}}%</span>
+                          aria-valuemin="0" aria-valuemax="100" style="width: 15%">
+                          <span class="sr-only">15%</span>
                         </div>
                       </div>
                     </div>
-                    
                     <!-- end 1 -->
                   </div>
                   <!-- end row -->
@@ -132,33 +130,24 @@
               </div>
             </div>
           </div>
-         
           <div class="card-body col-xs-10 col-md-10">
             <div class="row">
               <div class="col-md-2">
                 <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
-                <p class="text-secondary text-center">{{this.date}}</p>
-                
+                <p class="text-secondary text-center">15 Minutes Ago</p>
               </div>
               <div class="col-md-10">
                 <div class="clearfix"></div>
-                
-          
-                <!-- <li *ngFor="let rating of Ratings"> {{rating[i].review}}</li><br><br> -->
-                 {{this.review}}<br>
-                <!-- <p>
+                <p>Lorem Ipsum is simply dummy text of the pr make but also the leap into electronic typesetting,
+                  remaining
+                  essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+                </p>
+                <p>
                   <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
-                </p> -->
-                 <!-- wenas karanna -->
-                 <button (click)="addTextarea()">Add Textarea</button>
-                 <form>
-                     <div *ngFor="let textarea of textAreasList; let textarea_index= index" >
-                         <textarea name="{{textarea}}"rows="4" cols="50"[(ngModel)] = "str" ></textarea>
-                          
-                         
-                     </div>
-                 </form>
-              <div class="card card-inner">
+                </p>
+              </div>
+            </div>
+            <div class="card card-inner">
               <div class="card-body">
                 <div class="row">
                   <div class="col-md-2">
@@ -180,7 +169,6 @@
                 </div>
               </div>
             </div>
-          
 
           </div>
         </div>
@@ -225,7 +213,7 @@
                   <td scope="row">BC</td>
                   <td scope="row">BC</td>
                   <td scope="row">BC</td>
-                  <td scope="row"> <a class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/sellerprofile/ratingform">finalize</a>  </td>
+                  <td scope="row">BC</td>
                 </tr>
               </tbody>
             </table>
