--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -134,30 +134,38 @@
           </div>
          
           <div class="card-body col-xs-10 col-md-10">
+              <div *ngFor="let review of this.reviewlist ;let index= index ;let date of this.datelist" >
             <div class="row">
               <div class="col-md-2">
                 <img src="https://image.ibb.co/jw55Ex/def_face.jpg" class="img img-rounded img-fluid">
-                <p class="text-secondary text-center">{{this.date}}</p>
+                 <p class="text-secondary text-center">
+                   <!-- {{date}} -->
                 
               </div>
               <div class="col-md-10">
                 <div class="clearfix"></div>
                 
-          
+                
+                {{index}} {{review}}<br>
+                <!-- <button (click)="addTextarea()">Add Textarea</button>
+              <form>
+                   
+                      <textarea name="{{textarea}}"rows="4" cols="50"[(ngModel)] = "str" ></textarea>
+                      
+              </form> -->
+                <br><br>
+              </div>
+              
+
+              </div>
+              </div>
                 <!-- <li *ngFor="let rating of Ratings"> {{rating[i].review}}</li><br><br> -->
-                 {{this.review}}<br>
+                 <!-- {{this.review}}<br> -->
                 <!-- <p>
                   <a class="float-right btn btn-outline-primary ml-2"> <i class="fa fa-reply"></i> Reply</a>
                 </p> -->
                  <!-- wenas karanna -->
-                 <button (click)="addTextarea()">Add Textarea</button>
-                 <form>
-                     <div *ngFor="let textarea of textAreasList; let textarea_index= index" >
-                         <textarea name="{{textarea}}"rows="4" cols="50"[(ngModel)] = "str" ></textarea>
-                          
-                         
-                     </div>
-                 </form>
+                
               <div class="card card-inner">
               <div class="card-body">
                 <div class="row">
