--- a/frontend/src/app/shared/navbar/navbar.component.scss
+++ b/frontend/src/app/shared/navbar/navbar.component.scss
@@ -1,7 +1,11 @@
-#dropdownBasic1{
-    color:white;
+#dropdownBasic1 {
+    color: white;
 }
 
-.btn{
-    color:white;
+.btn {
+    color: white;
+}
+
+.navbar-brand {
+    color: black;
 }
