--- a/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/customerprofile/customerprofile.component.html
@@ -8,17 +8,15 @@
 
 
     <div class="container">
-      <div class="content-center">
-        <div>
-
+      <div class="content-center mt-4">
+        <div class="mt-5">
           <!--Profile Image-->
           <div class="photo-container">
             <img _ngcontent-c6="" alt="Thumbnail Image" class="rounded-circle img-raised  w-25 p-3"
               src="assets/img/ryan.jpg">
           </div>
           <!--/Profile Image-->
-
-          <h3 class="title">{{current_user?.username}}</h3>
+          <h2>{{current_user?.username}}</h2>
         </div>
 
         <div class="row justify-content-center">
@@ -32,8 +30,8 @@
           <div class="social-description">
             <a href="#button" class="btn btn-primary btn-lg btn-round" routerLink="/userprofile/bookmarks">Bookmarks</a>
           </div>
-
         </div>
+
       </div>
     </div>
   </div>
