--- a/frontend/src/app/shared/navbar/navbar.component.html
+++ b/frontend/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-primary fixed-top navbar-transparent" color-on-scroll="500">
+<nav class="navbar navbar-expand-lg bg-primary fixed-top" color-on-scroll="500">
     <div class="container">
 
         <div class="navbar-translate">
@@ -19,8 +19,7 @@
 
                 <div class="col">
                     <div ngbDropdown class="d-inline-block">
-                        <button class="btn btn-primary btn-simple btn-round btn-neutral" id="dropdownBasic1"
-                            type="button" ngbDropdownToggle>
+                        <button class="btn btn-primary btn-round" id="dropdownBasic1" type="button" ngbDropdownToggle>
                             <i class="now-ui-icons users_single-02"></i> Profile
                         </button>
                         <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
