--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -152,9 +152,9 @@
                 {{index+1}} {{review}}<br>
             
 
-              <a class="float-right btn btn-outline-primary ml-2"name="NIC" NIC="index+1"(click)="onLinkClicked()" > <i class="fa fa-reply"></i> Reply</a>
+              <a class="float-right btn btn-outline-primary ml-2"name="NIC" NIC="index+1"(click)="onLinkClicked(index+1)" > <i class="fa fa-reply"></i> Reply</a>
                 
-              <textarea *ngIf="buttonClicked " name="{{id}}"rows="4" id="index+1" cols="50"[(ngModel)] = "str" ></textarea>
+              <textarea *ngIf="buttonClicked == index+1" name="{{id}}"rows="4" id="index+1" cols="50"[(ngModel)] = "str" ></textarea>
               <!-- <div class="row">
                   <div class="col-12 p-0">
                       <button mat-raised-button color="accent" (click)="onSubmit(inputTexts[i])">Submit</button>
