--- a/frontend/src/app/components/sellerreply/sellerreply.component.html
+++ b/frontend/src/app/components/sellerreply/sellerreply.component.html
@@ -1,4 +1,3 @@
-<app-navbar></app-navbar>
 <div class="wrapper">
   <div class="filter"></div>
   <div class="container">
@@ -6,6 +5,10 @@
       <div class="col-md-2 col-sm-2">
         <div class="card text-center" style=" width: 60rem;">
           <h3>Purchase History</h3>
+          <h5>Product</h5>
+          <h5>Product_id</h5>
+          <h5>Description</h5>
+          <h5>category</h5>
           <div class="col-md-12">
             <div class="row">
             </div>
@@ -13,20 +16,20 @@
               <table class="table table-striped">
                 <thead>
                   <tr>
-                    <th scope="col">ID</th>
-                    <th scope="col" sortable="area" (sort)="onSort($event)">Product</th>
-                    <th scope="col" sortable="message" (sort)="onSort($event)">Messages</th>
-                    <th scope="col">Replies</th>
+                    <th scope="col">Product ID</th>
+                    <th scope="col" sortable="area" (sort)="onSort($event)">Seller</th>
+                    <th scope="col" sortable="message" (sort)="onSort($event)">Seller Message</th>
+                    <th scope="col">Finalize</th>
                     <th scope="col">Remove</th>
                     <th scope="col">Report</th>
 
                   </tr>
                 </thead>
                 <tbody>
-                  <tr *ngFor="let x of broadcastArray?.broadcast">
-                    <td>{{x._id | slice:-4}}</td>
-                    <td>{{x.product}}</td>
-                    <td scope="row">{{x.tags}}</td>
+                  <tr>
+                    <td>a</td>
+                    <td>a</td>
+                    <td scope="row">a</td>
                     <td scope="row">
                       <div class="social-description">
                         <a href="#button" class="btn btn-primary btn-lg btn-round btn-sm">A</a>
