--- a/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
+++ b/frontend/src/app/pages/userprofile/sellerprofile/sellerprofile.component.html
@@ -31,6 +31,56 @@
       </div>
     </div>
   </div>
+  <div class="mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-2">
+          <div class="card text-center" style=" width: 70rem;">
+            <h3>Ratings</h3>
+            <div class="col-md-12">
+              <div class="row">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-2">
+          <div class="card text-center" style=" width: 70rem;">
+            <h3>Broadcasts</h3>
+            <div class="col-md-12">
+              <div class="row">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="mt-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 col-sm-2">
+          <div class="card text-center" style=" width: 70rem;">
+            <h3>Recent sales</h3>
+            <div class="col-md-12">
+              <div class="row">
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!-- Ratings and Reviews-->
 
